// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTemplateSyncReducer should return initial state 1`] = `
Object {
  "error": "",
  "exportSettings": Array [],
  "importSettings": Array [],
  "loadingSettings": false,
}
`;

exports[`NewTemplateSyncReducer should start loading on setting values request 1`] = `
Object {
  "error": "",
  "exportSettings": Array [],
  "importSettings": Array [],
  "loadingSettings": true,
}
`;

exports[`NewTemplateSyncReducer should stop loading on setting values success 1`] = `
Object {
  "error": "",
  "exportSettings": Array [
    Object {
      "description": "Import or export names matching this regex (case-insensitive; snippets are not filtered)",
      "id": 47,
      "name": "filter",
      "settingsType": "string",
      "value": "",
    },
    Object {
      "description": "Negate the prefix/filter (for importing/exporting)",
      "id": 48,
      "name": "negate",
      "settingsType": "bool",
      "value": false,
    },
    Object {
      "description": "Target path to import and export. Different protocols can be used, for example /tmp/dir, git://example.com, https://example.com, ssh://example.com. When exporting to /tmp, note that production deployments may be configured to use private tmp.",
      "id": 49,
      "name": "repo",
      "settingsType": "string",
      "value": "https://github.com/theforeman/community-templates.git",
    },
  ],
  "importSettings": Array [
    Object {
      "description": "Associate templates to OS, organization and location",
      "id": 45,
      "name": "associate",
      "selection": Array [
        Object {
          "label": "New",
          "value": "new",
        },
        Object {
          "label": "Never",
          "value": "never",
        },
        Object {
          "label": "Always",
          "value": "always",
        },
      ],
      "settingsType": "string",
      "value": "new",
    },
    Object {
      "description": "Should importing overwrite locked templates?",
      "id": 46,
      "name": "force",
      "settingsType": "bool",
      "value": false,
    },
  ],
  "loadingSettings": false,
}
`;
